css e inicio js

--- a/www/index.html
+++ b/www/index.html
@@ -15,19 +15,20 @@
 </head>
 <body>
     <div class="container">
-
-        <div class="row">
+      <div class="caixa">
+        <div class="row titulo">
             <div class="col-xs-12">
                 <h1>aplication maps</h1>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-xs-12">
-                <button class="btn btn-block" id="mapa">ver mapa</button>
-            </div>
+        <div class="caixa1">
+          <div class="row">
+              <div class="col-xs-12">
+                  <button class="btn" id="mapa">ver mapa</button>
+              </div>
+          </div>
         </div>
-
+      </div>
     </div>
 </body>
 </html>
