--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
         <div class="caixa1">
           <div class="row">
               <div class="col-xs-12">
-                  <button class="btn" id="mapa">ver mapa</button>
+                  <button class="btn btn-block" id="mapa">see maps</button>
               </div>
           </div>
         </div>
